# rust-rhai-demo

./: Cargo.toml  Readme.md
src/: array_01.rhai  for1_01.rhai  game_script.rhai  my_script_01.rhai  operations.rhai
