[package]
name = "rhai_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
rand = "0.8.5"
rhai="1.18.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
